<resources>
    <string name="app_name">在矫通</string>
    <!--Login-->
    <string name="login_name">账号</string>
    <string name="login_passw">密码</string>
    <string name="login_login">登录</string>
    <string name="login_logon">注册</string>
    <string name="login_clear">清除</string>
    <!--Title按钮-->
    <string name="title_back"></string>
    <!--底部导航栏-->
    <string name="main_bottom_home">首页</string>
    <string name="main_bottom_message">消息</string>
    <string name="main_bottom_mine">我的</string>
    <!--Title人脸识别-->
    <string name="title_face_verify">身份验证</string>
    <string name="bt_face_capture">拍照</string>
</resources>


