<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:backButton="false"
        app:titleColor="@color/white"
        app:titleSize="20dp"
        app:barStyle="transparent"
        app:rightSize="0dp"
        app:leftSize="0dp"
        app:title="@string/app_name" />
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/login_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_login_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/login_passw"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bt_login_clear"
                android:text="@string/login_clear"
                android:layout_width="100dp"
                android:layout_height="50dp"/>
            <Button
                android:layout_marginLeft="50dp"
                android:text="@string/login_login"
                android:id="@+id/bt_login_login"
                android:layout_width="100dp"
                android:layout_height="50dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>