<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".common.FaceVerifyActivity">
    <!--顶部标题栏-->
    <com.hjq.bar.TitleBar
        android:visibility="visible"
        android:id="@+id/tb_rlsb"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/blue1"
        app:titleColor="@null"
        app:leftBackground="@null"
        app:rightBackground="@null"
        app:barStyle="transparent"
        app:leftTitle="@string/title_back"
        app:rightSize="0dp"
        app:title="@string/title_face_verify" />

    <TextView
        android:id="@+id/tv_faceverity_wait"
        android:gravity="center"
        android:text="请将人脸放置在圆形框内"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="visible"/>

   <com.cymaybe.foucsurfaceview.FocusSurfaceView
       android:id="@+id/fsc_faceVerify_preview"
       android:layout_gravity="center"
       android:layout_width="280dp"
       android:layout_height="372dp"
       android:background="@android:color/transparent"
       android:visibility="visible"
       app:focus_crop_width="278dp"
       app:focus_crop_height="370dp"
       app:focus_frame_can_change="false"
       app:focus_frame_color="@android:color/holo_green_dark"
       app:focus_frame_stroke_weight="1dp"
       app:focus_guide_color="@android:color/holo_green_dark"
       app:focus_guide_show_mode="not_show"
       app:focus_guide_stroke_weight="1dp"
       app:focus_handle_color="@android:color/holo_green_dark"
       app:focus_handle_show_mode="not_show"
       app:focus_handle_size="14dp"
       app:focus_min_frame_size="50dp"
       app:focus_mode="circle"
       app:focus_overlay_color="#66000000"
       app:focus_touch_padding="8dp"/>

    <ImageView
        android:id="@+id/iv_faceVerify_preview"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="320dp" />

    <LinearLayout
        android:id="@+id/ly_faceverify_pass"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:visibility="gone">
        <ImageView
            android:src="@drawable/ic_ok"
            android:layout_width="20dp"
            android:layout_height="20dp"/>
        <TextView
            android:text="你已通过人脸验证"
            android:textSize="20dp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/bt_takePhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_camera"
            android:background="@drawable/camera_button_bg"
            android:layout_marginTop="30dp"
            android:text="@string/bt_face_capture"
            android:textSize="20dp"
            android:visibility="visible" />
        <Button
            android:id="@+id/bt_faceVerify"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_face_verify_in"
            android:drawablePadding="5dp"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>